@@ -10,8 +10,11 @@ choose-mirror (0.031) UNRELEASED; urgency=low
     - Eugeniy Meshcheryakov : Updated Ukrainian translation (uk.po)
     - Andre Dahlqvist      : Update Swedish translation (sv.po)
     - Dennis Stampfer      : Update German translation (de.po)
+  * Christian Perrier
+    - Lowered priority of the country/mirror questions to medium
+      (countrychooser value used as default)
 
- -- Ognyan Kulev <ogi@fmi.uni-sofia.bg>  Sat, 14 Feb 2004 18:31:13 +0200
+ -- Christian Perrier <bubulle@debian.org>  Sun, 15 Feb 2004 11:27:14 +0100
 
 choose-mirror (0.030) unstable; urgency=low
 
